--- a/zammad_tg_bot/.env
+++ b/zammad_tg_bot/.env
@@ -1,3 +1,4 @@
 TELEGRAM_BOT_TOKEN=7870471679:AAGjwIireI_j3GLXTBTao2FhGcfKnm0vstc
 ZAMMAD_URL=http://192.168.170.129
 ZAMMAD_TOKEN=SB4xv6g6CVmnbJMtWhDKIQbxL-mbY44wdWXXnQi-yyXi4ac6m6vWF6HaL6NQGjx5
+ZAMMAD_AGENT_EMAIL=adverbekreklamov@gmail.com
